# rosha

./: README.md
rosha/: TODOs
rosha/rosha_diagnostic_aggregator/: .CMakeLists.txt.old.swp  .cproject  CMakeLists.txt  ChangeLog.txt  README.txt  analyzer_plugins.xml  package.xml  startGenSystem.sh
rosha/rosha_diagnostic_aggregator/include/AnalyzerHelper/: ObservationQueue.h  ObservationQueueItem.h
rosha/rosha_diagnostic_aggregator/include/DiagnosticEngine/: DiagnosticEngine.h
rosha/rosha_diagnostic_aggregator/include/DiagnosticEngine/KnowledgeBase/: BayesianKB.h  BayesianKC.h  BayesianML.h  BayesianModel.h  DSLFactory.h  DSLModel.h  KnowledgeBase.h  KnowledgeChange.h  Model.h  ModelFactory.h
rosha/rosha_diagnostic_aggregator/include/DiagnosticEngine/Reasoner/: BayesianQueryItem.h  BayesianReasoner.h  Reasoner.h
rosha/rosha_diagnostic_aggregator/include/diagnostic_aggregator/: aggregator.h  analyzer.h  analyzer_group.h  other_analyzer.h  status_item.h
rosha/rosha_diagnostic_aggregator/launch/: CN_analyzer_load.yaml  GenSystem_load.yaml  MultiAnalyzer_load.yaml  MultiAnalyzer_load.yaml~  SimSys_analyzer_load.yaml  TestHW_load.yaml  Test_load.yaml  Vrep_CarSim_analyzer_load.yaml  Vrep_analyzer_load.yaml  Vrep_carSim_slam_analyzer_load.yaml  Vrep_slam_analyzer_load.yaml
rosha/rosha_diagnostic_aggregator/src/: aggregator.cpp  aggregator_node.cpp  analyzer_group.cpp  status_item.cpp
rosha/rosha_diagnostic_aggregator/src/AnalyzerHelper/: ObservationQueue.cpp  ObservationQueueItem.cpp
rosha/rosha_diagnostic_aggregator/src/DiagnosticEngine/: DiagnosticEngine.cpp
rosha/rosha_diagnostic_aggregator/src/DiagnosticEngine/KnowledgeBase/: BayesianKB.cpp  BayesianKC.cpp  BayesianML.cpp  BayesianModel.cpp  DSLFactory.cpp  DSLModel.cpp  KnowledgeBase.cpp  KnowledgeChange.cpp  Model.cpp  ModelFactory.cpp
rosha/rosha_diagnostic_aggregator/src/DiagnosticEngine/Reasoner/: BayesianQueryItem.cpp  BayesianReasoner.cpp  Reasoner.cpp
rosha/rosha_diagnostic_aggregator/test/: diag_CNCompass_pub.py  diag_CNVision_pub.py  diag_RoboPkg_pub.py  diag_RoboPkg_pub2.py  diag_VrepGPS_pub.py  diag_VrepSLAM_Adapter_pub.py  diag_VrepSLAM_Remote_pub.py  diag_VrepSLAM_pub.py  diag_pub.py  expected_stale_pub.py  test_analyzers.yaml
rosha/rosha_msgs/: CMakeLists.txt  package.xml
rosha/rosha_msgs/msg/: CareRepairControl.msg  RecompositionInfo.msg  RedundanceInfo.msg  RepairAction.msg
rosha/rosha_recovery_manager/: CMakeLists.txt  package.xml
rosha/rosha_recovery_manager/src/: RecoveryManager.cpp  RecoveryManager_node.cpp
rosha/rosha_recovery_manager/test/: diag_agg_pub.py  test_RecoveryManager.cpp
rosha/rosha_repair_executor/: CMakeLists.txt  package.xml  repair_plugins.xml
rosha/rosha_repair_executor/include/GenRepairPlugins/: AddCommLink.h  BaseRepair.h  CapFailureReport.h  RemoveCommLink.h  RestartRepair.h  StopRepair.h  TestRepair.h
rosha/rosha_repair_executor/include/repair_executor/: RepairExecutor.h
rosha/rosha_repair_executor/src/: RepairExecutor.cpp  repair_executor_node.cpp
rosha/rosha_repair_executor/src/GenRepair/: AddCommLink.cpp  CapFailureReport.cpp  Empty_RecomposeModel.xml  RegisterPlugins.cpp  RemoveCommLink.cpp  RestartRepair.cpp  StopRepair.cpp  TestRepair.cpp
rosha/rosha_repair_executor/test/: repair_action_AddCommLink.py  repair_action_AddCommLink_vehicle1.py  repair_action_GPS_Recompmpose.py  repair_action_RedundantLoc.py  repair_action_RemoveCommLink.py  repair_action_SLAMAdapter.py  repair_action_SLAMAdapter_vehicle1.py  repair_action_SLAMRemoteProcessing.py  repair_action_SLAMRemoteProcessing_vehicle1.py  repair_action_locRecompmpose.py  repair_action_pub.py
rosha/smile_lib/: CMakeLists.txt  package.xml
rosha_tools/error_seeder/: CMakeLists.txt  package.xml
rosha_tools/error_seeder/src/: CompFailureConf.cpp  ErrorSeeder.cpp  ErrorSeederLib.cpp  error_seeder_node.cpp
rosha_tools/error_seeder/test/: ErrorSeederLib_test.cpp  ErrorSeeder_test.cpp
rosha_tools/error_seeder_msgs/: CMakeLists.txt  package.xml
rosha_tools/error_seeder_msgs/msg/: Error.msg  ErrorConf.msg
supplementary/system_config/: CMakeLists.txt  package.xml
supplementary/system_config/include/: SystemConfig.h
supplementary/system_config/src/: SystemConfig.cpp
vrep_car_sim/: .cproject  .project  Makefile
vrep_car_sim/camera_blobdetection/: CMakeLists.txt  package.xml
vrep_car_sim/camera_blobdetection/src/: camera_blobdetection_node.cpp
vrep_car_sim/camera_cardetection/: CMakeLists.txt  analyzer_plugins.xml~  package.xml
vrep_car_sim/camera_cardetection/model/: camera_cardetection_FailureModel_dbn.xdsl
vrep_car_sim/camera_streetdetection/: CMakeLists.txt~  analyzer_plugins.xml  analyzer_plugins.xml~  package.xml  package.xml~
vrep_car_sim/car_inertia/: CMakeLists.txt  analyzer_plugins.xml  package.xml
vrep_car_sim/car_laser_driver/: CMakeLists.txt  analyzer_plugins.xml  package.xml  readme.txt
vrep_car_sim/car_localizer/: CMakeLists.txt  analyzer_plugins.xml  package.xml  repair_plugins.xml
vrep_car_sim/car_motion/: CMakeLists.txt  analyzer_plugins.xml  package.xml
vrep_car_sim/car_msgs/: CMakeLists.txt  package.xml
vrep_car_sim/car_slam/: CMakeLists.txt  analyzer_plugins.xml  package.xml  readme.txt  repair_plugins.xml
vrep_car_sim/car_system_analyzer/: CMakeLists.txt  analyzer_plugins.xml  package.xml
vrep_car_sim/proximity_obstacledetection/: CMakeLists.txt  analyzer_plugins.xml  package.xml
vrep_car_sim/vrep_common/: CMakeLists.txt  package.xml
vrep_ros_packages/vrep_joy/: INFO.txt
vrep_sim/vrep_laser_driver/: CMakeLists.txt  analyzer_plugins.xml  package.xml
vrep_sim/vrep_localizer/: CMakeLists.txt  analyzer_plugins.xml  package.xml  readme.txt  repair_plugins.xml
vrep_sim/vrep_motion/: CMakeLists.txt  analyzer_plugins.xml  package.xml
vrep_sim/vrep_msgs/: CMakeLists.txt  package.xml
vrep_sim/vrep_sim_scene/: mySearchNCollect.ttt
vrep_sim/vrep_slam/: CMakeLists.txt  analyzer_plugins.xml  package.xml  repair_plugins.xml
vrep_sim/vrep_system_analyzer/: CMakeLists.txt  analyzer_plugins.xml  package.xml
(+201 files in other folders)
